packages/fortifier-macros/tests/validations/email/invalid_allow_display_text_fail.rs
use fortifier::Validate;

#[derive(Validate)]
struct EmailData<'a> {
    #[validate(email(allow_display_text = 1))]
    value: &'a str,
}

fn main() {}
